=======================================================================
                  SIESTA CHANGES: TOP IS MOST RECENT
=======================================================================

** CHANGES ALONG siesta-3.0 branch

------------------------------------------------------------------------
2011-08-26  13:15:00 GMT Alberto Garcia <albertog@icmab.es>  siesta-3.1
Siesta-3.1 release

Added release notes
Updated version string
Updated bug reporting guidelines

added:
  Docs/release.notes_3.1
modified:
  Docs/REPORTING_BUGS
  Docs/siesta.tex
  README
  version.info

------------------------------------------------------------------------
2011-08-26  13:05:00 GMT Alberto Garcia <albertog@icmab.es>  3.0-rc2-27
Do not count ghost atoms when printing ionic charge

This was purely cosmetic, but misleading: the variable
zvaltot now records only the sum of (pseudo)protons in
non-ghost species.

(+ cosmetic fix in the printing of lmxkb for ghosts
species in .ion files)

modified:
  Src/atomlist.f
  Src/basis_types.f

------------------------------------------------------------------------
2011-08-23  13:55:00 GMT Alberto Garcia <albertog@icmab.es>  3.0-rc2-26
Assorted bugfixes for recent features and cosmetics

Bugfixes for recent features:

* Remove a superfluous test in new parallelsubs code

  This fix solves a problem related to the new domain-decomposition
  code which affected TranSiesta runs

* Include support for domain_decom in Denchar makefile

Cosmetic changes:

 - State that the units for mprop distances are Ang
 - Clarify error message in ts_iohs regarding nspin
 - Write eigenvalues in eV in CML file (ioeig)
 - Use $(AR) instead of 'ar' in all makefiles
 - Specify Ry units for H in DMHS netcdf files
 - Fix call to 'memory' in Denchar/stsofr.f

modified:
  Src/Libs/makefile
  Src/MPI/Makefile
  Src/Sys/DOCUMENTED-TEMPLATE.make
  Src/fdf/makefile
  Src/iodmhs_netcdf.F90
  Src/ioeig.f
  Src/m_ts_in_siesta.F
  Src/m_ts_io.F90
  Src/parallelsubs.F